--- a/highlights.html
+++ b/highlights.html
@@ -8,14 +8,16 @@
     <title>Travel Highlights</title>
 </head>
 <body>
-    <nav>
-        <ul id="nav-links">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./destinations.html">Destinations</a></li>
-            <li><a href="./contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul id="nav-links">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./destinations.html">Destinations</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="header">
         <p>Travel Highlights</p>
     </div>
