--- a/destinations.html
+++ b/destinations.html
@@ -18,21 +18,21 @@
         <div class="li-item">
             <img src="./images/must-see-1.png" alt="Must-see Spots">
             <div class="description">
-                <h2>Must-see Spots</h2>
+                <h2><a href="https://www.lonelyplanet.com/articles/best-places-to-visit-in-japan"> Must-see Spots </a></h2>
                 <p>Discover travel destinations you absolutely cannot miss!</p>
             </div>
         </div>
         <div class="li-item">
             <img src="./images/must-see-2.png" alt="Pro Travel Tips">
             <div class="description">
-                <h2>Pro Travel Tips</h2>
+                <h2><a href="https://www.theinvisibletourist.com/planning-a-trip-to-japan-travel-tips/">Pro Travel Tips</a></h2>
                 <p>Have a hassle-free trip with these insightful pre-, mid-, and post-travel tips.</p>
             </div>
         </div>
         <div class="li-item">
             <img src="./images/must-see-3.png" alt="Food & Drinks">
             <div class="description">
-                <h2>Food & Drinks</h2>
+                <h2> <a href="https://www.japan.travel/en/things-to-do/eat-and-drink/">Food & Drinks</a></h2>
                 <p>Fill your stomach with these unique delicacies</p>
             </div>
         </div>
