--- a/destinations.html
+++ b/destinations.html
@@ -12,7 +12,7 @@
         <h1>What to Expect</h1>
         <h1>from our</h1>
         <h1>website</h1>
-        <button onclick="location.href='./Highlights.html'">Follow Me</button>
+        <button onclick="location.href='./highlights.html'">Follow Me</button>
     </div>
     <div id="right-section">
         <div class="li-item">
