--- a/highlights.html
+++ b/highlights.html
@@ -14,6 +14,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./destinations.html">Destinations</a></li>
+                <li><a href="./culture.html">Culture</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>
             </ul>
         </nav>
