--- a/about.html
+++ b/about.html
@@ -9,15 +9,17 @@
     <title>About</title>
 </head>
 <body>
-    <nav>
-        <ul id="nav-links">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./destinations.html">Destinations</a></li>
-            <li><a href="./highlights.html">Travel Highlights</a></li>
-            <li><a href="./culture.html">Culture</a></li>
-            <li><a href="./contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul id="nav-links">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./destinations.html">Destinations</a></li>
+                <li><a href="./highlights.html">Travel Highlights</a></li>
+                <li><a href="./culture.html">Culture</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="main">
         <div id="content">
     <section>
